fix text alignment

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -4,23 +4,27 @@
     background-color: #ffeaaa;
     margin: 0;
     text-align: center;
-    padding: 10px 5% 20px;
-    gap: 5px;
+    padding: 40px 5% 20px;
+    gap: 7px;
+
 }
 .header{
-    margin: auto 0 0;
+    margin: 0 0;
     background-color: #ffeaaa;
     text-align: center;
+    font-size: 32pt;
+    vertical-align: bottom;
+    line-height: .75rem;
   }
   .header-title-foodie {
     font-family: 'Source Serif Pro';
     color: #405f8b;
-    vertical-align: baseline;
+    /* vertical-align: bottom; */
   }
   .header-title-friends {
     font-family: 'Source Serif Pro';
     color: #f88c48;
-    vertical-align: baseline;
+    /* vertical-align: bottom; */
   }
 
 nav > a {
